<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/b_clear"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/btn_0"
        app:layout_constraintTop_toBottomOf="@+id/btn_9" />

    <EditText
        android:id="@+id/edit1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/btn_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/btn_1"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit1" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100dp"
        android:text="@string/btn_2"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:layout_constraintTop_toBottomOf="@+id/edit1" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100dp"
        android:text="@string/btn_3"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/btn_2"
        app:layout_constraintTop_toBottomOf="@+id/edit1" />

    <Button
        android:id="@+id/btn_Add"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/btn_add"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit1" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_4"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_5"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/btn_4"
        app:layout_constraintTop_toBottomOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_6"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/btn_5"
        app:layout_constraintTop_toBottomOf="@+id/btn_3" />

    <Button
        android:id="@+id/btn_Sub"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/btn_sub"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Add" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_7"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_8"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/btn_7"
        app:layout_constraintTop_toBottomOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_9"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/btn_8"
        app:layout_constraintTop_toBottomOf="@+id/btn_6" />

    <Button
        android:id="@+id/btn_Mul"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/btn_mul"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Sub" />

    <Button
        android:id="@+id/btn_dec"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_dec"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_0"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/btn_dec"
        app:layout_constraintTop_toBottomOf="@+id/btn_8" />

    <Button
        android:id="@+id/btn_Div"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/btn_div"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Mul" />

    <Button
        android:id="@+id/btn_equal"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/btn_equal"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

</androidx.constraintlayout.widget.ConstraintLayout>